--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,10 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
-    disqus :
-      short_name : mericsson
+    provider : false
+    #provider : disqus
+#    disqus :
+#      short_name : mericsson
 #    livefyre :
 #      site_id : 123
 #    intensedebate :
