--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ owner:
   name: Marcus Ericsson
   avatar: bio-photo.jpg
   bio: "software, personalization, skiing, coffee, traveling"
-  email: mericsson@gmail.com
+  email: 
   disqus-shortname: mericsson
   twitter: mericsson
   facebook: marcuse
