--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,7 @@ owner:
   github: mericsson
   stackoverflow: 3439/marcus-ericsson
   linkedin: codermarcus
+  airbnb: 615094
   xing: #username
   instagram: #username
   lastfm: #username
