--- a/package.json
+++ b/package.json
@@ -5,17 +5,8 @@
   "author": "Marcus Ericsson <mericsson@gmail.com>",
   "dependencies": {
     "gatsby": "^0.12.36",
-    "lodash": "^4.17.2",
     "moment": "^2.17.1",
-    "react-addons-shallow-compare": "^15.4.1",
-    "react-dates": "^4.1.0",
-    "react-helmet": "^3.2.2",
-    "react-responsive-grid": "^0.3.3",
-    "react-typography": "^0.15.0",
-    "safe-access": "^0.1.0",
-    "typography": "^0.15.0",
-    "typography-theme-wordpress-2016": "^0.15.0",
-    "underscore.string": "^3.2.3"
+    "safe-access": "^0.1.0"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0"
@@ -28,9 +19,7 @@
   },
   "scripts": {
     "dev": "gatsby develop",
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "develop": "gatsby develop",
     "build": "gatsby build",
     "deploy": "gatsby build && gh-pages -d public -b master"
   }
