--- a/package.json
+++ b/package.json
@@ -6,31 +6,12 @@
   "author": "Marcus Ericsson (mericsson.com)",
   "dependencies": {
     "gatsby": "^2.1.24",
-    "gatsby-image": "^2.0.31",
-    "gatsby-plugin-feed": "^2.0.14",
-    "gatsby-plugin-google-analytics": "^2.0.16",
-    "gatsby-plugin-manifest": "^2.0.22",
-    "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.8",
-    "gatsby-plugin-sharp": "^2.0.25",
-    "gatsby-remark-copy-linked-files": "^2.0.9",
-    "gatsby-remark-images": "^2.0.6",
-    "gatsby-remark-prismjs": "^3.2.4",
-    "gatsby-remark-responsive-iframe": "^2.0.9",
-    "gatsby-remark-smartypants": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.1",
-    "gatsby-transformer-sharp": "^2.1.15",
-    "prismjs": "^1.15.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-helmet": "^5.2.0",
-    "react-typography": "^0.16.19",
-    "typeface-athiti": "^0.0.72",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.54",
-    "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "react-helmet": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
@@ -43,7 +24,7 @@
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mericsson/mericsson-com",
+    "url": "git+https://github.com/mericsson/mericsson-com"
   },
   "scripts": {
     "build": "gatsby build",
